--- a/src/components/Category/Category.css
+++ b/src/components/Category/Category.css
@@ -8,30 +8,6 @@
   isolation: isolate;
 }
 
-.category-left-gradient {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  z-index: -1;
-  width: 800px;
-  height: 200px;
-  transform: translate(-10%, -50%) rotate(-20deg);
-  /* display: flex;
-flex-direction: column;
-align-items: stretch;
-justify-content: stretch; */
-  display: grid;
-  gap: 150px;
-}
-
-.category-left-gradient > div {
-  /* width: 100%;
-  height: 50%; */
-  /* border: 1px solid; */
-  filter: blur(70px);
-  /* opacity: 0.6; */
-}
-
 .category-container::before {
   content: "";
   position: absolute;
@@ -50,7 +26,7 @@ justify-content: stretch; */
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: clamp(2rem, 3vw, 3.6rem);
+  gap: clamp(1rem, 1.3vw, 1.5rem);
 }
 
 .category-title {
@@ -65,18 +41,28 @@ justify-content: stretch; */
 }
 
 .category-tab-btns > button {
-  font-size: clamp(1rem, 1.3vw, 1.5rem);
-  padding: 0.6rem 1.5rem;
-  border-radius: 100vw;
-  border: 1px solid rgba(196, 223, 223, 0.5);
+  font-size: clamp(1rem, 1vw, 1.2rem);
+  border: 0;
   background-color: transparent;
-  /* color: rgba(255, 255, 255, 0.7); */
-  color: rgba(196, 223, 223, 0.7);
+  color: rgb(196, 223, 223);
+  position: relative;
+  isolation: isolate;
 }
 
-.category-tab-btns > button:hover {
-  border: 1px solid rgba(196, 223, 223);
-  color: rgba(196, 223, 223);
+.category-tab-btns > button::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+  width: 100%;
+  height: 7px;
+  background-color: var(--primary-sky-400);
+  transition: height 300ms;
+}
+
+.category-tab-btns > button:hover::before {
+  height: 10px;
 }
 
 .category-carousel-container .scene {
@@ -116,6 +102,7 @@ justify-content: stretch; */
   transition: transform 1s, opacity 1s;
   border-radius: 1rem;
   overflow: hidden;
+  box-shadow: 5px 5px 0px var(--deep-white-100);
 }
 
 .carousel__cell img {
@@ -123,6 +110,42 @@ justify-content: stretch; */
   height: 100%;
   object-fit: cover;
   user-select: none;
+  filter: brightness(1);
+  transition: filter 200ms;
+}
+
+.carousel-cell-layer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* height: 20%; */
+  padding: 1rem 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  border-block-start: 1px solid rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+  display: grid;
+  place-items: center;
+  transition: backdrop-filter 200ms;
+  cursor: pointer;
+  transform: translateY(100%);
+  transition: transform 250ms ease-out, background-color 200ms ease-out;
+}
+
+.carousel-cell-layer:hover {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.carousel__cell:hover .carousel-cell-layer {
+  transform: translateY(0%);
+}
+
+.carousel-cell-layer svg {
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  transform: scale(1);
+  transition: transform 200ms ease-in;
 }
 
 .carousel__cell:nth-child(1) {
@@ -160,4 +183,18 @@ justify-content: stretch; */
 .carousel__cell:nth-child(9) {
   --tz: 824px;
   transform: rotateY(320deg) translateZ(var(--tz));
+}
+
+@media (max-width: 800px) {
+  .carousel-cell-layer {
+    transform: translateY(0);
+    padding: 0.3rem 0;
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+  }
+
+  .carousel-cell-layer svg {
+    width: 30px;
+    width: 30px;
+  }
 }
