--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -107,7 +107,7 @@ span {
 }
 @media (max-width: 576px) {
   .footer {
-    padding: 20px 10px;
+    padding: 40px 10px 20px 10px;
     border-radius: 1rem;
   }
 }
