--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -48,22 +48,13 @@
   line-height: 1.3;
   font-family: "Brice Bold";
   color: var(--deep-white-100);
-  /* color: black; */
-  /* background: linear-gradient(to right, #818cf8, #fb7185);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; */
+  text-shadow: 4px 4px 0px #fff;
 }
 
 .hero-highlight-title {
   display: inline-block;
-  background: linear-gradient(to right, #818cf8, #fb7185);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
   position: relative;
   isolation: isolate;
-  /* z-index: 100; */
 }
 
 .hero-highlight-title svg {
@@ -71,11 +62,10 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: -100;
   transform: translateY(-200%);
 }
 
-.hero-path{
+.hero-path {
   stroke-dasharray: 1528;
   stroke-dashoffset: 1528;
 }
@@ -141,14 +131,16 @@
   height: 100%;
   object-fit: cover;
   border-radius: 1rem;
-  /* filter: brightness(0.6); */
-  opacity: 0.5;
+  opacity: 0.6;
 }
 /* -----------------------------
  hero image slider styles ends
  ------------------------------- */
 
 @media (max-width: 799px) {
+  .hero-info h1 {
+    text-shadow: 2px 2px 0px #fff;
+  }
   .mobile-hero-img {
     display: block;
   }
