--- a/src/components/NewArival/NewArival.css
+++ b/src/components/NewArival/NewArival.css
@@ -13,16 +13,9 @@
   height: 100%;
   object-fit: cover;
   border-radius: 2rem;
+  /* filter: brightness(1); */
+  opacity: 0.8;
 }
-
-/* .new-arrival-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
-} */
 
 .new-arrival-text-container {
   position: absolute;
@@ -32,7 +25,7 @@
 }
 
 .new-arrival-text-container h2 {
-  color: #fff;
+  color: var(--deep-white-100);
   font-size: clamp(2.5rem, 8.3vw, 10rem);
   font-family: "Brice Bold";
   line-height: 1.4;
@@ -40,9 +33,9 @@
   text-align: center;
 }
 
-@supports (-webkit-text-stroke: 1px #fff) {
+@supports (-webkit-text-stroke: 1px var(--deep-white-100)) {
   .new-arrival-text-container h2 {
-    -webkit-text-stroke: 1px #fff;
+    -webkit-text-stroke: 1px var(--deep-white-100);
     -webkit-text-fill-color: transparent;
   }
 }
