--- a/src/components/ui/ProductCard/ProductCard.css
+++ b/src/components/ui/ProductCard/ProductCard.css
@@ -1,21 +1,18 @@
 .product-card {
-  display: flex;
-  display: flex;
-  flex-direction: column;
-  /* max-width: 400px; */
-  border: 1px solid var(--base-gray-50);
+  /* border: 1px solid var(--base-gray-50); */
   border-radius: 15px;
   color: var(--base-gray-50);
   overflow: hidden;
+  box-shadow: 2px 2px 0px var(--deep-white-100);
 }
 
 .product-card-img {
-  /* width: 200px; */
   width: 100%;
-  height: 250px;
+  height: 200px;
   transform: scale(1);
   transition: transform 300ms;
   object-fit: cover;
+  overflow: hidden;
 }
 
 .product-card-img:hover {
@@ -24,8 +21,6 @@
 
 .product-card-content {
   position: relative;
-  width: 100%;
-  height: 100%;
   isolation: isolate;
   overflow: hidden;
 }
@@ -52,14 +47,16 @@
   gap: 2rem;
   width: 100%;
   height: 100%;
-  padding: 20px;
-  border-top: 1px solid var(--base-gray-50);
-  background-color: rgb(0 0 0 / 0.4);
+  padding: 2rem 1rem;
+  border-top: 1px solid rgb(255 255 255 / 0.5);
+  background-color: rgb(0 0 0 / 0.6);
+  /* backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px); */
   opacity: 1;
 }
 
 .product-card-content-layer hr {
-  border-top: 1px solid rgb(255 255 255 / 0.9);
+  border-top: 1px solid rgb(255 255 255 / 0.5);
   border-bottom: 0;
 }
 
