--- a/src/pages/AllToys/AllToys.css
+++ b/src/pages/AllToys/AllToys.css
@@ -17,14 +17,11 @@
   font-size: 2rem;
 }
 
-.search-form-control {
+/* .search-form-control {
   display: flex;
   align-items: center;
   border-radius: 100vw;
-  /* border: 1px solid gold; */
-  /* border-top-left-radius: 100vw;border-bottom-left-radius: 100vw; */
   overflow: hidden;
-  /* background-color: #fff; */
   background-color: var(--primary-sky-800);
   padding-inline-start: 1rem;
 }
@@ -64,9 +61,9 @@
   padding-inline: 1rem;
   color: var(--primary-sky-100);
 }
-.search-form-control button:hover{
+.search-form-control button:hover {
   background-color: var(--primary-sky-600);
-}
+} */
 
 .toys-total-count span {
   font-size: 0.9rem;
