--- a/src/pages/AllToys/AllToys.css
+++ b/src/pages/AllToys/AllToys.css
@@ -17,54 +17,6 @@
   font-size: 2rem;
 }
 
-/* .search-form-control {
-  display: flex;
-  align-items: center;
-  border-radius: 100vw;
-  overflow: hidden;
-  background-color: var(--primary-sky-800);
-  padding-inline-start: 1rem;
-}
-
-.search-form-control svg {
-  display: inline-block;
-  width: 25px;
-  height: 25px;
-  margin-inline-end: 4px;
-}
-
-.search-form-control svg,
-.search-form-control input::placeholder {
-  color: var(--base-gray-300);
-}
-
-.search-form-control:focus-within {
-  outline: 1px solid var(--primary-sky-500);
-}
-
-.search-form-control :is(input, button) {
-  padding-block: 1rem;
-  border: none;
-  background-color: transparent;
-}
-.search-form-control :is(input, button):focus {
-  outline: 0;
-}
-.search-form-control input {
-  inline-size: 400px;
-  color: var(--base-gray-50);
-}
-.search-form-control button {
-  cursor: pointer;
-  background-color: var(--base-gray-200);
-  background-color: var(--primary-sky-700);
-  padding-inline: 1rem;
-  color: var(--primary-sky-100);
-}
-.search-form-control button:hover {
-  background-color: var(--primary-sky-600);
-} */
-
 .toys-total-count span {
   font-size: 0.9rem;
   color: var(--base-gray-300);
@@ -123,7 +75,6 @@
   align-items: center;
   gap: 0.5rem;
   cursor: pointer;
-  /* border: 1px solid #fff ; */
 }
 
 :is(.toys-filter-wrapper, .toys-sortby-wrapper):hover
@@ -146,85 +97,12 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(400px, 400px));
   justify-content: center;
-  /* width: 100%; */
   gap: 1rem;
 }
-/* @media (max-width: 1440px) {
-  .toys-container {
-    grid-template-columns: repeat(2, 1fr);
-  }
+.toys-not-found-title {
+  width: fit-content;
+  margin: 0 auto;
+  margin-block: 50px 30vh;
+  font-size: 1.5rem;
+  color: rgb(246, 75, 75);
 }
-@media (max-width: 768px) {
-  .toys-container {
-    grid-template-columns: repeat(1, 1fr);
-  }
-} */
-
-/* .all-toys-container {
-  margin: 100px 0;
-}
-.all-toys-container table {
-  border-collapse: collapse;
-  border-spacing: 0;
-  width: 100%;
-  border: 1px solid #ddd;
-}
-
-.all-toys-container th {
-  background: rgba(0, 0, 255, 0.112);
-}
-
-.all-toys-container th,
-td {
-  text-align: left;
-  padding: 16px;
-}
-
-.all-toys-container tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-
-.all-toys-container img {
-  width: 35px;
-  height: 35px;
-  object-fit: cover;
-  border-radius: 9999px;
-}
-
-.all-toys-container .name-td {
-  display: flex;
-  align-items: center;
-  gap: 3px;
-}
-
-.search-container {
-  margin-bottom: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.search-container input {
-  padding: 0.7rem 1rem;
-  width: 300px;
-  border: 1px solid rgba(0, 0, 255, 0.389);
-  border-right: none;
-}
-
-.search-container input:focus {
-  outline: 1px solid blue;
-}
-
-.search-container button {
-  padding: 0.4rem 1rem;
-  border: 1px solid blue;
-  border-left: none;
-  background-color: rgba(0, 0, 255, 0.735);
-  color: white;
-  cursor: pointer;
-  transition: all 0.3s;
-}
-
-.search-container button:hover {
-  background-color: blue;
-} */
